# nevaware-pulse

./: .gitignore  CODE_OF_CONDUCT.md  DI_SETUP_GUIDE.md  LICENSE  README.md  SPEC.md  about_window.py  build_exe.py  config.json  config.template.json  create_defibrillator.ps1  defibrillator.bat  emoji_picker.py  funding.json  heartbeat.py  install.py  kill_pulse.pyw  launcher.pyw  madlib_window.py  make_release.py  neve_bridge.py  pyproject.toml  settings_window.py  setup_pypi.py  tray_app.py
.github/: FUNDING.yml
.github/workflows/: bump-version.yml  release.yml
assets/: make_logo.py
modules/email_watcher/: email_watcher.py  module.json
modules/neve_memory/: module.json
modules/voice_output/: README.md  module.json  voice_output.py
nevaware_pulse/: __init__.py  launcher.py
